More robust error handling in payload parser
GitOrigin-RevId: 6708daf1d3ef13708579f715baedc4fbe5ef0966

--- a/misk-admin-web-actions/src/index.html
+++ b/misk-admin-web-actions/src/index.html
@@ -26,6 +26,11 @@
         background-color: #e69a9a;
         position: absolute;
       }
+      .error-marker {
+        background-color: rgba(255, 0, 0, 0.2);
+        border-bottom: 2px solid red;
+        position: absolute;
+      }
     </style>
   </head>
   <body>
